# tkxcursor

./: .gitignore  LICENSE  Makefile.in  README.md  aclocal.m4  config.h.in  configure.ac  pkgIndex.tcl.in
doc/: xcursor.md  xcursor.n
generic/: xcursor.c  xcursor.h
tclconfig/: tcl.m4
tests/: all.tcl  xcursor.test
